vs2015 fixes nuget+references+packaging

--- a/Tests/UnitTests/MessageBirdUnitTests/MessageBirdUnitTests.csproj
+++ b/Tests/UnitTests/MessageBirdUnitTests/MessageBirdUnitTests.csproj
@@ -35,7 +35,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL" />
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
@@ -58,9 +61,12 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\MessageBird\MessageBird.csproj">
-      <Project>{C49CD3F8-BCDB-4BA9-B817-6A6C65452510}</Project>
+      <Project>{c49cd3f8-bcdb-4ba9-b817-6a6c65452510}</Project>
       <Name>MessageBird</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
